--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.7.0
 asgiref==3.8.1
 attrs==24.2.0
 autobahn==24.4.2
@@ -8,6 +9,7 @@ constantly==23.10.4
 cryptography==43.0.1
 daphne==4.1.2
 Django==4.2
+djangorestframework==3.15.2
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
@@ -15,6 +17,7 @@ pillow==11.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
+pydantic_core==2.23.4
 pyOpenSSL==24.2.1
 service-identity==24.1.0
 setuptools==75.2.0
@@ -23,5 +26,3 @@ Twisted==24.7.0
 txaio==23.1.1
 typing_extensions==4.12.2
 zope.interface==7.1.0
-
-django-ninja~=1.3.0
