--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ pydantic_core==2.23.4
 pyOpenSSL==24.2.1
 service-identity==24.1.0
 setuptools==75.2.0
+shortuuid==1.0.13
 sqlparse==0.5.1
 Twisted==24.7.0
 txaio==23.1.1
