--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ constantly==23.10.4
 cryptography==43.0.1
 daphne==4.1.2
 Django==4.2
+django-widget-tweaks==1.5.0
 djangorestframework==3.15.2
 hyperlink==21.0.0
 idna==3.10
